package com.recycling.domain;

public enum Category {
    ELECTRONICS,
    PLASTIC,
    GLASS,
    PAPER,
    METAL,
    TEXTILE,
    OTHER
}
